--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-maps": "^1.7.1"
+    "react-native-maps": "^1.7.1",
+    "expo-updates": "~0.18.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
